# HackathonBan

HackathonBan/: Dockerfile  README.md  adjustable_learning_path_data.json  ai_logic.py  angular.json  chatbot.py  database.py  info.py  learning_path_model.h5  learningpathAI.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.bak  requirements.txt
HackathonBan/src/: index.html  main.ts  styles.css
HackathonBan/src/app/: app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
HackathonBan/src/app/calculadora/: calculadora.component.css  calculadora.component.html  calculadora.component.ts
HackathonBan/src/app/chatbot/: chatbot.component.css  chatbot.component.html  chatbot.component.ts
HackathonBan/src/app/components/dashboard/: dashboard.component.css  dashboard.component.html  dashboard.component.ts
HackathonBan/src/app/linea/: linea.component.css  linea.component.html  linea.component.ts
HackathonBan/src/app/modules/: modules.component.css  modules.component.html  modules.component.ts
HackathonBan/src/app/productos/: productos.component.css  productos.component.html  productos.component.ts
HackathonBan/src/app/recommended-modules/: recommended-modules.component.html  recommended-modules.component.spec.ts  recommended-modules.component.ts
HackathonBan/src/app/ruta/: ruta.component.css  ruta.component.html  ruta.component.ts
HackathonBan/src/app/services/: auth.service.ts  news.service.ts
HackathonBan/src/app/survey/: survey.component.css  survey.component.html  survey.component.ts
(+7 files in other folders)
